--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=gc-${spring.profiles.active}
 logging.level.io.axoniq.demo=debug
 
 # We look for Axon Server locally
-axon.axonserver.servers=172.17.0.2
+axon.axonserver.servers=
 
 # The default is to have no Servlets
 spring.main.web-application-type=none
